# photfdtd

./: .gitignore  .readthedocs.yaml  LICENSE  PyPhot API 接口文档.md  README.en.md  README.md  push-all.ps1  pyproject.toml  requirements.txt
code/: arc.py  directional_coupler.py  mmi.py  sbend.py  waveguide.py  ysplitter.py
docs/: developer-guide.md  index.rst  requirements.txt
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
examples/: 1x3_FBSWG_ex.py  1x4_FWG-powersplitter_ex.py  230323 圆光子晶体.py  3mode_lantern.py  3mode_transmission.py  6mode_lantern.py  6mode_lantern_transmission.py  AWG.py  AWG_TEST-1.py  AWG_TEST.py  Animate_E_field.py  Nonuniform_grid_ex.py  Nonuniform_grid_matlab.py  Plot_E_field.py  S parameters.py  arc_ex.py  arc_ex_2D.py  arc_shape_ex.py  basic_ex.py  blockdetector_ex.py  calculate_OPD.py  calculate_bandwidth.py  calculate_sigmaE.py  calculate_time.py  combined_directional_couplers_ex.py  combined_rings_ex.py  combined_waveguides_ex.py  cone_ex.py  dc_ex.py  dc_ex_2D.py  detector_ex.py  detector_ex_block.py  eigenmode_solver_ex.py  eigenmode_solver_test.py  ellipsoid_ex.py  fiber_ex.py  frequency_domain_ex.py  fwg_ex.py  fwg_ex_2D.py  grating_ex.py  (+51 more)
examples/Easy calculation/: calculate_OPD.py  calculate_bandwidth.py  calculate_coupling_length.py  calculate_resonance.py  calculate_ring_radius.py  calculate_source_profile.py  calculate_thermo_effect.py  calculate_time.py  (+1 more)
photfdtd/: Lantern_3Mode.py  Lantern_6Mode.py  __init__.py  analyse.py  arc.py  arc_shape.py  awg_input.py  awg_output.py  circle.py  cone.py  constants.py  conversions.py  directional_coupler.py  ellipsoid_fiber.py  fiber.py  fwg.py  grating.py  grid.py  hc_arf.py  index.py  intercore_coupling.py  mmi.py  mmi_test.py  mzi.py  overlap_calculator.py  pc.py  plot.py  plot_awg.py  ring.py  sbend.py  sbend_shape.py  solve.py  tff.py  visual.py  waveguide.py  ysplitter.py
source/: conf.py
test/: arc_test.py  sbend_test.py  waveguide_test.py  ysplitter_test.py
tests/: arc_test.py  dc_test.py  mmi_test.py  ring_test.py  sbend_test.py  utils.py  waveguide_test.py
(+71 files in other folders)
